# useful_functions_ml

./: CMakeLists.txt  README.md
include/: matrixops.h  usefulfuncs.h
src/: matrixops.c  usefulfuncs.c
tests/: test_matrixops.c
